# LVGLumaUI

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LANGUAGE_SPEC.md  LICENSE  LVGL_MAPPING.md  NEXT_STEPS.md  PRD.md  README.md  TASKS.md  one-shot-prompt.md
.github/: copilot-instructions.md
.github/agents/: lumaui-phase-workflow.agent.md
.github/prompts/: lumaui-phase-workflow.prompt.md
.omx/: metrics.json
.omx/logs/: turns-2026-04-05.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/lvgl_c/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: end_to_end.rs
compiler/: Cargo.toml
compiler/src/: config.rs  diagnostics.rs  lib.rs  project.rs
docs/: ARCHITECTURE.md  DECISION_BRIEF_TEMPLATE.md  DOCUMENTATION_SCHEME.md  DOCUMENT_RECLASSIFICATION_AUDIT.md  LANGUAGE_CHANGELOG.md  LANGUAGE_REVIEW.md  LANGUAGE_SPEC.md  LVGL_MAPPING.md  NEXT_STEPS.md  PRD.md  TASKS.md  VERSIONING.md  intent.md  project_specification.md
docs/archive/: CONSTITUTION.md  intent.md  one-shot-prompt.md  project_specification.md
examples/dashboard/: README.md  lumaui.toml
examples/minimal/: README.md  lumaui.toml
ir/: Cargo.toml
ir/src/: lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs  parse.rs
scripts/: lumaui-phase-check.sh
semantic/: Cargo.toml
tests/: README.md
(+29 files in other folders)
