[workspace]
members = [
    "cli",
    "compiler",
    "parser",
    "semantic",
    "ir",
    "backend/lvgl_c",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0-beta.1"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
